// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FirstCharacterJumpLinkNav Snapshot > renders with all buttons disabled correctly 1`] = `
"<nav class="mx-auto flex justify-between overflow-x-scroll"><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->A
    <!--v-if-->
  </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->B
    <!--v-if-->
  </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->C
    <!--v-if-->
  </a></nav>"
`;

exports[`FirstCharacterJumpLinkNav Snapshot > renders with all buttons enabled correctly 1`] = `
"<nav class="mx-auto flex justify-between overflow-x-scroll"><a href="#A" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->A
    <!--v-if-->
  </a><a href="#B" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->B
    <!--v-if-->
  </a><a href="#C" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->C
    <!--v-if-->
  </a></nav>"
`;

exports[`FirstCharacterJumpLinkNav Snapshot > renders with no characters correctly 1`] = `"<nav class="mx-auto flex justify-between overflow-x-scroll"></nav>"`;

exports[`FirstCharacterJumpLinkNav Snapshot > renders with some buttons disabled correctly 1`] = `
"<nav class="mx-auto flex justify-between overflow-x-scroll"><a href="#A" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->A
    <!--v-if-->
  </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->B
    <!--v-if-->
  </a><a href="#C" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary h-10 w-10 items-center bg-none text-2xl lg:justify-center">
    <!--v-if-->C
    <!--v-if-->
  </a></nav>"
`;
